# drf-notification-system

./: LICENSE  MANIFEST.in  README.md  setup.cfg
notification_system/: admin.py  apps.py  managers.py  models.py  notification_delivery.py  paginations.py  parsers.py  permissions.py  tasks.py  urls.py  utils.py  validators.py
notification_system/api/: serializers.py  urls.py  views.py
notification_system/common/: notification_handler.py
notification_system/migrations/: 0001_initial.py  0002_alter_outgoingmessage_status.py
