[metadata]
name = drf-notification-system
version = 0.2
description = A Django app to sends notifications to internal users.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahdirahimi1999/drf-notification-system/
author = Mahdi Rahimi
author_email = mahdi.rahimi95@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.8